--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 @import 'tailwindcss';
 
